# switcher

./: .gitignore  .travis.yml  Cargo.toml  README.md  shell.nix
examples/simple/: Makefile  main.c
src/: crc.c  crc.h  crc.rs  lib.rs  switcher.c  switcher.h
