[package]
name = "switcher"
version = "0.0.0"
authors = ["Alex Crawford <alex@switcher.code.acrawford.com>"]

[dependencies]
bitfield = "~0.13.0"

[dev-dependencies]
cortex-m = "~0.5.6"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"
