[package]
name = "switcher"
version = "0.1.0"
authors = ["Alex Crawford <alex.crawford@coreos.com>"]

[dependencies]
bitfield = "~0.13.0"

[dev-dependencies]
cortex-m = "~0.5.6"
cortex-m-rt = "~0.5.3"
panic-halt = "~0.1.3"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"
